--- a/Site/cupons/index.html
+++ b/Site/cupons/index.html
@@ -6,17 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/Site/css/cupons.css">
+        <link rel="stylesheet" href="../css/cupons.css">
         <title>Cadastro</title>
     </head>
     <body>
         <header>
             <div id="caixao">
-                <a href="#"><img src="/Site/imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
+                <a href="#"><img src="../imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
                 <form>
                     <input type="text" placeholder="Digite para pesquisar">
                     <button type="submit">
-                        <img src="/Site/imagens/lupa.png" alt="lupa de pesquisa">
+                        <img src="../imagens/lupa.png" alt="lupa de pesquisa">
                     </button>
                 </form>
             </div>
@@ -39,7 +39,7 @@
         </header>
         <main>
             <div class="inicio">
-                <img src="/Site/imagens/cupom.png" class="lista" alt="ícone de cupom">
+                <img src="../imagens/cupom.png" class="lista" alt="ícone de cupom">
                 <h5 class="oi"> Cupons disponíveis </h5>
             </div>
             <div class="doisdivs">
