--- a/Site/feedback/index.html
+++ b/Site/feedback/index.html
@@ -6,17 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/Site/css/feedback.css">
+        <link rel="stylesheet" href="../css/feedback.css">
         <title>Cadastro</title>
     </head>
     <body>
         <header>
             <div id="caixao">
-                <a href="#"><img src="/Site/imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
+                <a href="#"><img src="../imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
                 <form>
                     <input type="text" placeholder="Digite para pesquisar">
                     <button type="submit">
-                        <img src="/Site/imagens/lupa.png" alt="lupa de pesquisa">
+                        <img src="../imagens/lupa.png" alt="lupa de pesquisa">
                     </button>
                 </form>
             </div>
@@ -39,16 +39,16 @@
         </header>
         <main>
             <div class="inicio">
-                <img src="/Site/imagens/pedido.png" class="lista" alt="ícone de cupom">
+                <img src="../imagens/pedido.png" class="lista" alt="ícone de cupom">
                 <h5 class="oi"> O que houve de errado? </h5>
             </div>
 
             <div class="pedido">
                 <p class="p"> Pedido #00001 </p>
-                <img src="/Site/imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
+                <img src="../imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
                 <h3 class="titulo"> Bolo Estrogenado</h3>
                 <div class="iniciodois">
-                    <img src="/Site/imagens/caminhao.png" class="caminhao" alt="caminhão">
+                    <img src="../imagens/caminhao.png" class="caminhao" alt="caminhão">
                     <p class="acaminho"> Entregue </p>
                 </div>
                 <h3 class="preco"> R$: 20,00 </h3>
@@ -67,11 +67,11 @@
                 </div>
                 <div class="imgs">
                     <button class="boto">
-                        <img src="/Site/imagens/camera.png">
+                        <img src="../imagens/camera.png">
                     </button>
                     <div class="im">
-                        <img src="/Site/imagens/66opkkln.png" class="haro">
-                        <img src="/Site/imagens/66opkkln.png" class="raor">
+                        <img src="../imagens/66opkkln.png" class="haro">
+                        <img src="../imagens/66opkkln.png" class="raor">
                     </div>
                 </div>
             </div>
