--- a/Site/home/index.html
+++ b/Site/home/index.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/Site/css/home.css">
+    <link rel="stylesheet" href="../css/home.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
 </head>
@@ -26,7 +26,7 @@
                     Bolos
                 </a>
                 <a href="../ofertas/index.html">
-                    Ofertas
+                    Personalizados
                 </a>
                 <a href="../cupons/index.html">
                     Cupons
@@ -71,9 +71,10 @@
                 </form>
             </div>
             <div class="img">
-                <img class="" src="/Site/imagens/bolo-kit-katCROP.png">
+                <img class="" src="../imagens/bolo-kit-katCROP.png">
             </div>
         </div>
+        <div class="conteudoPrincipal">
         <div class="recomendados">
             <h2>
                 Os mais vendidos!
@@ -146,7 +147,7 @@
         </div>
 
         <div class="imagem">
-            <img class="imagem" src="/Site/imagens/anuncio.png">
+            <img class="imagem" src="../imagens/anuncio.png">
         </div>
 
         <div class="recomendados">
@@ -289,7 +290,59 @@
                     </p>
                 </div>
             </div>
+            </div>
         </div>
     </main>
+    <footer>
+        <div class="tudinho">
+            <div>
+                <img class="logro" src="../imagens/logay.png">
+                <p class="dev">
+                    Desenvolvido pelo grupo CDP Inc.
+                </p>
+            </div>
+            <div class="textito">
+                <p class="ti">
+                    Nos localizamos em:
+                </p>
+                <p>
+                    R. Humaitá, 638 - Bela Vista, 
+
+                </p>
+                <p>
+                    São Paulo - SP, 01321-010
+                </p>
+            </div>
+            <div class="textito"> 
+                <p class="ti">
+                    Algum problema ou dúvida?
+                </p>
+                <p>
+                    +55 11 98736-0701
+                </p>
+                <p>
+                    edson.koshikumo@etec.sp.gov.br
+                </p>
+            </div>
+            <div class="redes">
+                <p>
+                    Siga-nos
+                </p>
+                <div>
+                    <img src="../imagens/instagram.png">
+                    <img src="../imagens/twitter-logo-7.png">
+                </div>
+            </div>
+            <div class="app">
+                <p>
+                    Baixe Nossos Aplicativos
+                </p>
+                <div class="zap">
+                    <img class="aba" src="../imagens/DownloadAndroid.png">
+                    <img class="abb" src="../imagens/appstore.png">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
