--- a/Site/mapa/index.html
+++ b/Site/mapa/index.html
@@ -14,16 +14,16 @@
     <body>
         <header>
             <div id="caixao">
-                <a href="#"><img src="/Site/imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
+                <a href="#"><img src="../imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
                 <form>
                     <input type="text" placeholder="Digite para pesquisar">
                     <button type="submit">
-                        <img src="/Site/imagens/lupa.png" alt="lupa de pesquisa">
+                        <img src="../imagens/lupa.png" alt="lupa de pesquisa">
                     </button>
                 </form>
                 <div>
                     <div>
-                        <img src="/Site/imagens/fotinha.png">
+                        <img src="../imagens/fotinha.png">
                     </div>
                     <div class="perfil">
                         <p>
@@ -34,7 +34,7 @@
                         </p>
                     </div>
                     <div>
-                        <img src="/Site/imagens/carrinho.png">
+                        <img src="../imagens/carrinho.png">
                     </div>
                 </div>
             </div>
@@ -67,10 +67,10 @@
                     <h3>
                         A caminho
                     </h3>
-                    <img src="/Site/imagens/ic_motorcycle_24px.png">
+                    <img src="../imagens/ic_motorcycle_24px.png">
                     </div>
                     <div class="baixo">
-                        <img src="/Site/imagens/sextafeira.png">
+                        <img src="../imagens/sextafeira.png">
                     </div>
                 </div>
                 <div class="dados">
@@ -79,7 +79,7 @@
                             Pedido #00001
                         </p>
                         <div class="chega">
-                            <img src="/Site/imagens/ic_access_time_24px.png">
+                            <img src="../imagens/ic_access_time_24px.png">
                             <p class="a">
                                 Chega em 39 minutos
                             </p>
@@ -89,7 +89,7 @@
                         </p>
                     </div>
                     <div class="destino">
-                        <img src="/Site/imagens/ic_home_24px.png">
+                        <img src="../imagens/ic_home_24px.png">
                         <div class="txt">
                             <p class="ar">
                                 R. Humaitá, 638
@@ -103,13 +103,13 @@
                        Seu pedido: 
                     </p> 
                     <div class="pedido">
-                        <img class="bolo" src="/Site/imagens/66opkkln.png">
+                        <img class="bolo" src="../imagens/66opkkln.png">
                         <div class="txt">
                             <p>
                                 Bolo Estrogenado
                             </p>
                             <div class="chega">
-                                <img class="caminhao" src="/Site/imagens/caminhao.png">
+                                <img class="caminhao" src="../imagens/caminhao.png">
                                 <p>
                                     A caminho
                                 </p>
@@ -125,7 +125,7 @@
         <footer>
             <div class="tudinho">
                 <div>
-                    <img class="logro" src="/Site/imagens/logay.png">
+                    <img class="logro" src="../imagens/logay.png">
                     <p class="dev">
                         Desenvolvido pelo grupo CDP Inc.
                     </p>
@@ -158,8 +158,8 @@
                         Siga-nos
                     </p>
                     <div>
-                        <img src="/Site/imagens/instagram.png">
-                        <img src="/Site/imagens/twitter-logo-7.png">
+                        <img src="../imagens/instagram.png">
+                        <img src="../imagens/twitter-logo-7.png">
                     </div>
                 </div>
                 <div class="app">
@@ -167,8 +167,8 @@
                         Baixe Nossos Aplicativos
                     </p>
                     <div class="zap">
-                        <img class="aba" src="/Site/imagens/DownloadAndroid.png">
-                        <img class="abb" src="/Site/imagens/appstore.png">
+                        <img class="aba" src="../imagens/DownloadAndroid.png">
+                        <img class="abb" src="../imagens/appstore.png">
                     </div>
                 </div>
             </div>
