--- a/Site/pesquisa/index.html
+++ b/Site/pesquisa/index.html
@@ -14,11 +14,11 @@
     <body>
         <header>
             <div id="caixao">
-                <a href="#"><img src="/Site/imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
+                <a href="#"><img src="../imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
                 <form>
                     <input type="text" placeholder="Digite para pesquisar">
                     <button type="submit">
-                        <img src="/Site/imagens/lupa.png" alt="lupa de pesquisa">
+                        <img src="../imagens/lupa.png" alt="lupa de pesquisa">
                     </button>
                 </form>
             </div>
