--- a/Site/carrinho/index.html
+++ b/Site/carrinho/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/Site/css/carrinho.css">
-    <title>Cadastro</title>
+    <link rel="stylesheet" href="../css/carrinho.css">
+    <title> Senhor Bolo - Home </title>
 </head>
 <body>
     <header>
         <div id="caixao">
-            <a href="#"><img src="/Site/imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
+            <a href="#"><img src="../imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
             <form>
                 <input type="text" placeholder="Digite para pesquisar">
                 <button type="submit">
-                    <img src="/Site/imagens/lupa.png" alt="lupa de pesquisa">
+                    <img src="../imagens/lupa.png" alt="lupa de pesquisa">
                 </button>
             </form>
         </div>
@@ -36,17 +36,18 @@
                 </a>
             </nav>
         </div>
+    
     </header>
     <main>
         <div class="inicio">
-            <img src="/Site/imagens/carrinho.png" class="lista" alt="ícone de pedido">
+            <img src="../imagens/carrinho.png" class="lista" alt="ícone de pedido">
             <h5 class="oi"> Carrinho </h5>
         </div>
         <div class="pedido">
-            <img src="/Site/imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
+            <img src="../imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
             <h3 class="titulo"> Bolo Estrogenado </h3>
             <div class="iniciodois">
-                <img src="/Site/imagens/logobolo.png" class="caminhao" alt="caminhão">
+                <img src="../imagens/logobolo.png" class="caminhao" alt="caminhão">
                 <p class="acaminho"> Bolo de chocolate com cobertura de glacê colorido </p>
             </div>
             <h3 class="preco"> R$: 20,00 </h3>
@@ -63,10 +64,10 @@
         </div>
 
         <div class="pedido">
-            <img src="/Site/imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
+            <img src="../imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
             <h3 class="titulo"> Bolo Estrogenado </h3>
             <div class="iniciodois">
-                <img src="/Site/imagens/logobolo.png" class="caminhao" alt="caminhão">
+                <img src="../imagens/logobolo.png" class="caminhao" alt="caminhão">
                 <p class="acaminho"> Bolo de chocolate com cobertura de glacê colorido </p>
             </div>
             <h3 class="preco"> R$: 20,00 </h3>
@@ -83,10 +84,10 @@
         </div>
 
         <div class="pedido">
-            <img src="/Site/imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
+            <img src="../imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
             <h3 class="titulo"> Bolo Estrogenado </h3>
             <div class="iniciodois">
-                <img src="/Site/imagens/logobolo.png" class="caminhao" alt="caminhão">
+                <img src="../imagens/logobolo.png" class="caminhao" alt="caminhão">
                 <p class="acaminho"> Bolo de chocolate com cobertura de glacê colorido </p>
             </div>
             <h3 class="preco"> R$: 20,00 </h3>
