--- a/Site/pedidos/pedido.html
+++ b/Site/pedidos/pedido.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/Site/css/pedidos.css">
+    <link rel="stylesheet" href="../css/pedidos.css">
     <title>Cadastro</title>
 </head>
 <body>
     <header>
         <div id="caixao">
-            <a href="#"><img src="/Site/imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
+            <a href="#"><img src="../imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
             <form>
                 <input type="text" placeholder="Digite para pesquisar">
                 <button type="submit">
-                    <img src="/Site/imagens/lupa.png" alt="lupa de pesquisa">
+                    <img src="../imagens/lupa.png" alt="lupa de pesquisa">
                 </button>
             </form>
         </div>
@@ -39,16 +39,16 @@
     </header>
     <main>
         <div class="inicio">
-            <img src="/Site/imagens/pedido.png" class="lista" alt="ícone de pedido">
+            <img src="../imagens/pedido.png" class="lista" alt="ícone de pedido">
             <h5 class="oi"> Meus pedidos </h5>
         </div>
         <p class="emaberto"> Em aberto </p>
         <div class="pedido">
             <p> Pedido #00001 </p>
-            <img src="/Site/imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
+            <img src="../imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
             <h3 class="titulo"> Bolo Estrogenado</h3>
             <div class="iniciodois">
-                <img src="/Site/imagens/caminhao.png" class="caminhao" alt="caminhão">
+                <img src="../imagens/caminhao.png" class="caminhao" alt="caminhão">
                 <p class="acaminho"> A caminho </p>
             </div>
             <h3 class="preco"> R$: 20,00 </h3>
@@ -56,7 +56,7 @@
                 <button class="um">
                     <div class=botao>
                         <p> Rastrear </p>
-                        <img src="/site/imagens/aviaodepapel.png" alt=" Símbolo de rastrear" class="rastrear">
+                        <img src="../imagens/aviaodepapel.png" alt=" Símbolo de rastrear" class="rastrear">
                     </div>
                 </button>
                 <button class="dois">
@@ -69,10 +69,10 @@
 
         <div class="pedido">
             <p> Pedido #00002 </p>
-            <img src="/Site/imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
+            <img src="../imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
             <h3 class="titulo"> Bolo Estrogenado</h3>
             <div class="iniciodois">
-                <img src="/Site/imagens/caminhao.png" class="caminhao" alt="caminhão">
+                <img src="../imagens/caminhao.png" class="caminhao" alt="caminhão">
                 <p class="acaminho">Entregue </p>
             </div>
             <h3 class="preco"> R$: 20,00 </h3>
@@ -80,7 +80,7 @@
                 <button class="um">
                     <div class=botao>
                         <p> Rastrear </p>
-                        <img src="/site/imagens/aviaodepapel.png" alt=" Símbolo de rastrear" class="rastrear">
+                        <img src="../imagens/aviaodepapel.png" alt=" Símbolo de rastrear" class="rastrear">
                     </div>
                 </button>
                 <button class="dois">
@@ -91,10 +91,10 @@
 
         <div class="pedido">
             <p> Pedido #00003 </p>
-            <img src="/Site/imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
+            <img src="../imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
             <h3 class="titulo"> Bolo Estrogenado</h3>
             <div class="iniciodois">
-                <img src="/Site/imagens/caminhao.png" class="caminhao" alt="caminhão">
+                <img src="../imagens/caminhao.png" class="caminhao" alt="caminhão">
                 <p class="acaminho"> Entregue </p>
             </div>
             <h3 class="preco"> R$: 20,00 </h3>
@@ -102,7 +102,7 @@
                 <button class="um">
                     <div class=botao>
                         <p> Rastrear </p>
-                        <img src="/site/imagens/aviaodepapel.png" alt=" Símbolo de rastrear" class="rastrear">
+                        <img src="../imagens/aviaodepapel.png" alt=" Símbolo de rastrear" class="rastrear">
                     </div>
                 </button>
                 <button class="dois">
@@ -113,10 +113,10 @@
 
         <div class="pedido">
             <p> Pedido #00004 </p>
-            <img src="/Site/imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
+            <img src="../imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
             <h3 class="titulo"> Bolo Estrogenado</h3>
             <div class="iniciodois">
-                <img src="/Site/imagens/caminhao.png" class="caminhao" alt="caminhão">
+                <img src="../imagens/caminhao.png" class="caminhao" alt="caminhão">
                 <p class="acaminho"> Entregue </p>
             </div>
             <h3 class="preco"> R$: 20,00 </h3>
@@ -124,7 +124,7 @@
                 <button class="um">
                     <div class=botao>
                         <p> Rastrear </p>
-                        <img src="/site/imagens/aviaodepapel.png" alt=" Símbolo de rastrear" class="rastrear">
+                        <img src="../imagens/aviaodepapel.png" alt=" Símbolo de rastrear" class="rastrear">
                     </div>
                 </button>
                 <button class="dois">
