--- a/Site/produto/personalizado/index.html
+++ b/Site/produto/personalizado/index.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/Site/css/personalizado.css">
+    <link rel="stylesheet" href="../../css/personalizado.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
 </head>
@@ -18,26 +18,26 @@
 <body>
     <header>
         <div id="caixao">
-            <a href="#"><img src="/Site/imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
+            <a href="#"><img src="../../imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
             <form>
                 <input type="text" placeholder="Digite para pesquisar">
                 <button type="submit">
-                    <img src="/Site/imagens/lupa.png" alt="lupa de pesquisa">
+                    <img src="../../imagens/lupa.png" alt="lupa de pesquisa">
                 </button>
             </form>
         </div>
         <div id="caixinha">
             <nav>
-                <a href="../produto/index.html">
+                <a href="../../produto/index.html">
                     Bolos
                 </a>
-                <a href="../ofertas/index.html">
+                <a href="../../ofertas/index.html">
                     Ofertas
                 </a>
-                <a href="../cupons/index.html">
+                <a href="../../cupons/index.html">
                     Cupons
                 </a>
-                <a href="../aboutus/index.html">
+                <a href="../../aboutus/index.html">
                     Sobre nós
                 </a>
             </nav>
@@ -70,61 +70,61 @@
             </h2>
             <div class="produtos">
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
@@ -139,61 +139,61 @@
             </h2>
             <div class="produtos">
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
@@ -208,61 +208,61 @@
             </h2>
             <div class="produtos">
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="/Site/imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste">
                     <p>
                         Chocolate
                     </p>
