--- a/Site/pedidos/rastreio/index.html
+++ b/Site/pedidos/rastreio/index.html
@@ -14,21 +14,36 @@
 <body>
     <header>
         <div id="caixao">
-            <a href="#"><img src="/Site/imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
-            <form>
-                <input type="text" placeholder="Digite para pesquisar">
-                <button type="submit">
-                    <img src="/Site/imagens/lupa.png" alt="lupa de pesquisa">
-                </button>
-            </form>
+            <div class="conteudoHeader">
+                <a href="#"><img src="../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
+                <form>
+                    <input type="text" placeholder="Digite para pesquisar">
+                    <button type="submit">
+                        <img src="../imagens/lupa.png" alt="lupa de pesquisa">
+                    </button>
+                </form>
+                <a href="#" class="linkUsuario">
+                    <div class="perfilUsuario">
+                        <img src="../imagens/Misaka_10032.jpg" alt="Foto de perfil do usuário">
+                        <h4> Felipe Ribeiro <br> <span> Ver perfil </span></h4>
+                    </div>
+                </a>
+                <a href="#" class="linkCarrinho">
+                    <div class="carrinhoCompras">
+                        <span class="material-icons md-30">
+                            shopping_cart
+                        </span>
+                    </div>
+                </a>
+            </div>
         </div>
         <div id="caixinha">
             <nav>
-                <a href="../produto/index.html">
-                    Bolos
+                <a href="../pesquisa/index.html">
+                    Produtos
                 </a>
-                <a href="../ofertas/index.html">
-                    Ofertas
+                <a href="../produto/personalizado/index.html">
+                    Personalizado
                 </a>
                 <a href="../cupons/index.html">
                     Cupons
@@ -42,7 +57,7 @@
     <main>
         <div class="rastrear">
             <div class="texto">
-            <img src="/Site/imagens/ic_edit_location_24px.png" class="imagem">
+            <img src="/Site/imagens/ic_edit_location_24px.png" class="imagem" alt="Ícone de Marcação">
             <h3>
                 Onde deseja que entreguemos seu pedido?
             </h3>
@@ -56,7 +71,7 @@
             <div class="enderecos">
                 <div class="endereco">
                     <div>
-                        <img src="/Site/imagens/ic_home_24px.png" class="img">
+                        <img src="/Site/imagens/ic_home_24px.png" alt="Ícone de Casa" class="img">
                     </div>
                     <div>
                         <p> R. WhatsApp, 125</p>
@@ -65,7 +80,7 @@
                 </div>
                 <div class="endereco">
                     <div>
-                        <img src="/Site/imagens/ic_home_24px.png" class="img">
+                        <img src="/Site/imagens/ic_home_24px.png" alt="Ícone de Casa" class="img">
                     </div>
                     <div>
                         <p> R. WhatsApp, 125</p>
@@ -74,7 +89,7 @@
                 </div>
                 <div class="endereco">
                     <div>
-                        <img src="/Site/imagens/ic_home_24px.png" class="img">
+                        <img src="/Site/imagens/ic_home_24px.png" alt="Ícone de Casa" class="img">
                     </div>
                     <div>
                         <p> R. WhatsApp, 125</p>
@@ -84,5 +99,56 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="tudinho">
+            <div>
+                <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
+                <p class="dev">
+                    Desenvolvido pelo grupo CDP Inc.
+                </p>
+            </div>
+            <div class="textito">
+                <p class="ti">
+                    Nos localizamos em:
+                </p>
+                <p>
+                    R. Humaitá, 638 - Bela Vista, 
+
+                </p>
+                <p>
+                    São Paulo - SP, 01321-010
+                </p>
+            </div>
+            <div class="textito"> 
+                <p class="ti">
+                    Algum problema ou dúvida?
+                </p>
+                <p>
+                    +55 11 98736-0701
+                </p>
+                <p>
+                    edson.koshikumo@etec.sp.gov.br
+                </p>
+            </div>
+            <div class="redes">
+                <p>
+                    Siga-nos
+                </p>
+                <div>
+                    <img src="../imagens/instagram.png" alt="logo do instagram">
+                    <img src="../imagens/twitter-logo-7.png" alt="logo do twitter"> 
+                </div>
+            </div>
+            <div class="app">
+                <p>
+                    Baixe Nossos Aplicativos
+                </p>
+                <div class="zap">
+                    <img class="aba" src="../imagens/DownloadAndroid.png" alt="Faça o Download do aplicativo no Android">
+                    <img class="abb" src="../imagens/appstore.png" alt="Faça o Download do aplicativo na AppStore">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
