--- a/Site/cadastro/index.html
+++ b/Site/cadastro/index.html
@@ -8,11 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/cadastro.css">
     <title>Cadastro</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <header>
         <div id="caixao">
-            <a href="#"><img src="../imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
+            <a href="#"><img src="../imagens/logay.png" alt="Logo escrito Senhor Bolo" width="258" height="50"></a>
             <form>
                 <input type="text" placeholder="Digite para pesquisar">
                 <button type="submit">
@@ -22,11 +23,11 @@
         </div>
         <div id="caixinha">
             <nav>
-                <a href="../produto/index.html">
-                    Bolos
+                <a href="../pesquisa/index.html">
+                    Produtos
                 </a>
-                <a href="../ofertas/index.html">
-                    Ofertas
+                <a href="../produto/personalizado/index.html">
+                    Personalizado
                 </a>
                 <a href="../cupons/index.html">
                     Cupons
@@ -37,11 +38,9 @@
             </nav>
         </div>
     </header>
-
-
     <main>
         <div class="login">
-            <img src="../imagens/logay.png" alt="logo senhor bolo" width="267" height="52">
+            <img src="../imagens/logay.png" alt="logo escrito senhor bolo" width="267" height="52">
             
             <div class="texto">           
                 <h4>
@@ -58,7 +57,7 @@
                 <form>
                     <input type="password">
                     <button type="submit">
-                        <img src="../imagens/versenha.png" alt="ver senha" >
+                        <img src="../imagens/versenha.png" alt= "ver senha" >
                     </button>
                 </form>
                 <h4>
@@ -72,18 +71,20 @@
                     <input type="checkbox">
                 </div>
             </div>
-            <button class="loginbotao" type="submit">   
-                <h3>
-                    Cadastrar
-                </h3>
-            </button>
+            <a href="../home/index.html">
+                <button class="loginbotao" type="submit" >   
+                    <h3>
+                        Cadastrar
+                    </h3>
+                </button>
+            </a>
         </div>
     </main>
 
     <footer>
         <div class="tudinho">
             <div>
-                <img class="logro" src="../imagens/logay.png">
+                <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
                 <p class="dev">
                     Desenvolvido pelo grupo CDP Inc.
                 </p>
@@ -116,8 +117,8 @@
                     Siga-nos
                 </p>
                 <div>
-                    <img src="../imagens/instagram.png">
-                    <img src="../imagens/twitter-logo-7.png">
+                    <img src="../imagens/instagram.png" alt="logo do instagram">
+                    <img src="../imagens/twitter-logo-7.png" alt="logo do twitter"> 
                 </div>
             </div>
             <div class="app">
@@ -125,8 +126,8 @@
                     Baixe Nossos Aplicativos
                 </p>
                 <div class="zap">
-                    <img class="aba" src="../imagens/DownloadAndroid.png">
-                    <img class="abb" src="../imagens/appstore.png">
+                    <img class="aba" src="../imagens/DownloadAndroid.png" alt="Faça o Download do aplicativo no Android">
+                    <img class="abb" src="../imagens/appstore.png" alt="Faça o Download do aplicativo na AppStore">
                 </div>
             </div>
         </div>
