--- a/Site/home/index.html
+++ b/Site/home/index.html
@@ -12,21 +12,38 @@
         rel="stylesheet">
     <link rel="stylesheet" href="../css/home.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title> Senhor Bolo</title>
 </head>
 
 <body>
     <header>
         <div id="caixao">
-            <a href="#"><img src="../imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
+            <div class="conteudoHeader">
+                <a href="#"><img src="../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
+                
+                <a href="#" class="linkUsuario">
+                    <div class="perfilUsuario">
+                        <img src="../imagens/Misaka_10032.jpg" alt="Foto de perfil do usuário">
+                        <h4> Felipe Ribeiro <br> <span> Ver perfil </span></h4>
+                    </div>
+                </a>
+                <a href="#" class="linkCarrinho">
+                    <div class="carrinhoCompras">
+                        <span class="material-icons md-30">
+                            shopping_cart
+                        </span>
+                    </div>
+                </a>
+            </div>
         </div>
         <div id="caixinha">
             <nav>
-                <a href="../produto/index.html">
-                    Bolos
+                <a href="../pesquisa/index.html">
+                    Produtos
                 </a>
-                <a href="../ofertas/index.html">
-                    Personalizados
+                <a href="../produto/personalizado/index.html">
+                    Personalizado
                 </a>
                 <a href="../cupons/index.html">
                     Cupons
@@ -71,7 +88,7 @@
                 </form>
             </div>
             <div class="img">
-                <img class="" src="../imagens/bolo-kit-katCROP.png">
+                <img class="" src="../imagens/bolo-kit-katCROP.png" alt="bolo de kit kat">
             </div>
         </div>
         <div class="conteudoPrincipal">
@@ -81,73 +98,76 @@
             </h2>
             <div class="produtos">
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
-                </div>
-                <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
-                    <h4>
-                        Bolo de chocolate
-                    </h4>
-                    <p>
-                        R$: 29,90
-                    </p>
+                    </a>
                 </div>
             </div>
         </div>
 
         <div class="imagem">
-            <img class="imagem" src="../imagens/anuncio.png">
+            <img class="imagem" src="../imagens/anuncio.png" alt="Anúncio para baixar o aplicativo">
         </div>
 
         <div class="recomendados">
@@ -156,67 +176,70 @@
             </h2>
             <div class="produtos">
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
-                </div>
-                <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
-                    <h4>
-                        Bolo de chocolate
-                    </h4>
-                    <p>
-                        R$: 29,90
-                    </p>
+                    </a>
                 </div>
             </div>
         </div>
@@ -227,76 +250,78 @@
             </h2>
             <div class="produtos">
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <a class="teste" href="../produto/index.html">
+                    <img src="../imagens/bolor.png" class="teste" alt="Bolo de Chocolate">
                     <h4>
                         Bolo de chocolate
                     </h4>
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
-                <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
-                    <h4>
-                        Bolo de chocolate
-                    </h4>
-                    <p>
-                        R$: 29,90
-                    </p>
-                </div>
-            </div>
             </div>
         </div>
     </main>
     <footer>
         <div class="tudinho">
             <div>
-                <img class="logro" src="../imagens/logay.png">
+                <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
                 <p class="dev">
                     Desenvolvido pelo grupo CDP Inc.
                 </p>
@@ -329,8 +354,8 @@
                     Siga-nos
                 </p>
                 <div>
-                    <img src="../imagens/instagram.png">
-                    <img src="../imagens/twitter-logo-7.png">
+                    <img src="../imagens/instagram.png" alt="logo do instagram">
+                    <img src="../imagens/twitter-logo-7.png" alt="logo do twitter"> 
                 </div>
             </div>
             <div class="app">
@@ -338,8 +363,8 @@
                     Baixe Nossos Aplicativos
                 </p>
                 <div class="zap">
-                    <img class="aba" src="../imagens/DownloadAndroid.png">
-                    <img class="abb" src="../imagens/appstore.png">
+                    <img class="aba" src="../imagens/DownloadAndroid.png" alt="Faça o Download do aplicativo no Android">
+                    <img class="abb" src="../imagens/appstore.png" alt="Faça o Download do aplicativo na AppStore">
                 </div>
             </div>
         </div>
