--- a/Site/mapa/index.html
+++ b/Site/mapa/index.html
@@ -9,42 +9,41 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/mapa.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Resultado da Pesquisa</title>
+        <title> Dados do seu pedido</title>
     </head>
     <body>
         <header>
             <div id="caixao">
-                <a href="#"><img src="../imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
-                <form>
-                    <input type="text" placeholder="Digite para pesquisar">
-                    <button type="submit">
-                        <img src="../imagens/lupa.png" alt="lupa de pesquisa">
-                    </button>
-                </form>
-                <div>
-                    <div>
-                        <img src="../imagens/fotinha.png">
-                    </div>
-                    <div class="perfil">
-                        <p>
-                            Felipe Ribeiro
-                        </p>
-                        <p>
-                            Ver perfil
-                        </p>
-                    </div>
-                    <div>
-                        <img src="../imagens/carrinho.png">
-                    </div>
+                <div class="conteudoHeader">
+                    <a href="#"><img src="../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
+                    <form>
+                        <input type="text" placeholder="Digite para pesquisar">
+                        <button type="submit">
+                            <img src="../imagens/lupa.png" alt="lupa de pesquisa">
+                        </button>
+                    </form>
+                    <a href="#" class="linkUsuario">
+                        <div class="perfilUsuario">
+                            <img src="../imagens/Misaka_10032.jpg" alt="Foto de perfil do usuário">
+                            <h4> Felipe Ribeiro <br> <span> Ver perfil </span></h4>
+                        </div>
+                    </a>
+                    <a href="#" class="linkCarrinho">
+                        <div class="carrinhoCompras">
+                            <span class="material-icons md-30">
+                                shopping_cart
+                            </span>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div id="caixinha">
                 <nav>
-                    <a href="../produto/index.html">
-                        Bolos
+                    <a href="../pesquisa/index.html">
+                        Produtos
                     </a>
-                    <a href="../ofertas/index.html">
-                        Ofertas
+                    <a href="../produto/personalizado/index.html">
+                        Personalizado
                     </a>
                     <a href="../cupons/index.html">
                         Cupons
@@ -67,10 +66,10 @@
                     <h3>
                         A caminho
                     </h3>
-                    <img src="../imagens/ic_motorcycle_24px.png">
+                    <img src="../imagens/ic_motorcycle_24px.png" alt="Ícone de Motocicleta">
                     </div>
                     <div class="baixo">
-                        <img src="../imagens/sextafeira.png">
+                        <img src="../imagens/sextafeira.png" alt="Mapa mostrando seu endereço">
                     </div>
                 </div>
                 <div class="dados">
@@ -79,7 +78,7 @@
                             Pedido #00001
                         </p>
                         <div class="chega">
-                            <img src="../imagens/ic_access_time_24px.png">
+                            <img src="../imagens/ic_access_time_24px.png" alt="Ícone de Relógio">
                             <p class="a">
                                 Chega em 39 minutos
                             </p>
@@ -89,7 +88,7 @@
                         </p>
                     </div>
                     <div class="destino">
-                        <img src="../imagens/ic_home_24px.png">
+                        <img src="../imagens/ic_home_24px.png" alt="Ícone de Casa">
                         <div class="txt">
                             <p class="ar">
                                 R. Humaitá, 638
@@ -103,13 +102,13 @@
                        Seu pedido: 
                     </p> 
                     <div class="pedido">
-                        <img class="bolo" src="../imagens/66opkkln.png">
+                        <img class="bolo" src="../imagens/66opkkln.png" alt="Bolo do Haro">
                         <div class="txt">
                             <p>
                                 Bolo Estrogenado
                             </p>
                             <div class="chega">
-                                <img class="caminhao" src="../imagens/caminhao.png">
+                                <img class="caminhao" src="../imagens/caminhao.png" alt="Ícone de Caminhão">
                                 <p>
                                     A caminho
                                 </p>
@@ -125,7 +124,7 @@
         <footer>
             <div class="tudinho">
                 <div>
-                    <img class="logro" src="../imagens/logay.png">
+                    <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
                     <p class="dev">
                         Desenvolvido pelo grupo CDP Inc.
                     </p>
@@ -136,7 +135,7 @@
                     </p>
                     <p>
                         R. Humaitá, 638 - Bela Vista, 
-
+    
                     </p>
                     <p>
                         São Paulo - SP, 01321-010
@@ -158,8 +157,8 @@
                         Siga-nos
                     </p>
                     <div>
-                        <img src="../imagens/instagram.png">
-                        <img src="../imagens/twitter-logo-7.png">
+                        <img src="../imagens/instagram.png" alt="logo do instagram">
+                        <img src="../imagens/twitter-logo-7.png" alt="logo do twitter"> 
                     </div>
                 </div>
                 <div class="app">
@@ -167,8 +166,8 @@
                         Baixe Nossos Aplicativos
                     </p>
                     <div class="zap">
-                        <img class="aba" src="../imagens/DownloadAndroid.png">
-                        <img class="abb" src="../imagens/appstore.png">
+                        <img class="aba" src="../imagens/DownloadAndroid.png" alt="Faça o Download do aplicativo no Android">
+                        <img class="abb" src="../imagens/appstore.png" alt="Faça o Download do aplicativo na AppStore">
                     </div>
                 </div>
             </div>
