--- a/Site/pedidos/pedido.html
+++ b/Site/pedidos/pedido.html
@@ -6,27 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../css/pedidos.css">
-    <title>Cadastro</title>
+    <title> Pedido </title>
 </head>
-<body>
+<body>s
     <header>
         <div id="caixao">
-            <a href="#"><img src="../imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
-            <form>
-                <input type="text" placeholder="Digite para pesquisar">
-                <button type="submit">
-                    <img src="../imagens/lupa.png" alt="lupa de pesquisa">
-                </button>
-            </form>
+            <div class="conteudoHeader">
+                <a href="#"><img src="../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
+                <form>
+                    <input type="text" placeholder="Digite para pesquisar">
+                    <button type="submit">
+                        <img src="../imagens/lupa.png" alt="lupa de pesquisa">
+                    </button>
+                </form>
+                <a href="#" class="linkUsuario">
+                    <div class="perfilUsuario">
+                        <img src="../imagens/Misaka_10032.jpg" alt="Foto de perfil do usuário">
+                        <h4> Felipe Ribeiro <br> <span> Ver perfil </span></h4>
+                    </div>
+                </a>
+                <a href="#" class="linkCarrinho">
+                    <div class="carrinhoCompras">
+                        <span class="material-icons md-30">
+                            shopping_cart
+                        </span>
+                    </div>
+                </a>
+            </div>
         </div>
         <div id="caixinha">
             <nav>
-                <a href="../produto/index.html">
-                    Bolos
+                <a href="../pesquisa/index.html">
+                    Produtos
                 </a>
-                <a href="../ofertas/index.html">
-                    Ofertas
+                <a href="../produto/personalizado/index.html">
+                    Personalizado
                 </a>
                 <a href="../cupons/index.html">
                     Cupons
@@ -45,10 +61,10 @@
         <p class="emaberto"> Em aberto </p>
         <div class="pedido">
             <p> Pedido #00001 </p>
-            <img src="../imagens/66opkkln.png" class="bolo" alt=" Haro bolo ">
+            <img src="../imagens/66opkkln.png" class="bolo" alt=" Bolo do Haro ">
             <h3 class="titulo"> Bolo Estrogenado</h3>
             <div class="iniciodois">
-                <img src="../imagens/caminhao.png" class="caminhao" alt="caminhão">
+                <img src="../imagens/caminhao.png" class="caminhao" alt="ícone de caminhão">
                 <p class="acaminho"> A caminho </p>
             </div>
             <h3 class="preco"> R$: 20,00 </h3>
@@ -135,6 +151,57 @@
 
         
     </main>
+    <footer>
+        <div class="tudinho">
+            <div>
+                <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
+                <p class="dev">
+                    Desenvolvido pelo grupo CDP Inc.
+                </p>
+            </div>
+            <div class="textito">
+                <p class="ti">
+                    Nos localizamos em:
+                </p>
+                <p>
+                    R. Humaitá, 638 - Bela Vista, 
+
+                </p>
+                <p>
+                    São Paulo - SP, 01321-010
+                </p>
+            </div>
+            <div class="textito"> 
+                <p class="ti">
+                    Algum problema ou dúvida?
+                </p>
+                <p>
+                    +55 11 98736-0701
+                </p>
+                <p>
+                    edson.koshikumo@etec.sp.gov.br
+                </p>
+            </div>
+            <div class="redes">
+                <p>
+                    Siga-nos
+                </p>
+                <div>
+                    <img src="../imagens/instagram.png" alt="logo do instagram">
+                    <img src="../imagens/twitter-logo-7.png" alt="logo do twitter"> 
+                </div>
+            </div>
+            <div class="app">
+                <p>
+                    Baixe Nossos Aplicativos
+                </p>
+                <div class="zap">
+                    <img class="aba" src="../imagens/DownloadAndroid.png" alt="Faça o Download do aplicativo no Android">
+                    <img class="abb" src="../imagens/appstore.png" alt="Faça o Download do aplicativo na AppStore">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
