--- a/Site/perfil/index.html
+++ b/Site/perfil/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/perfil.css">
-    <title> Senhor Bolo - Gerenciar Perfil </title>
+    <title> Gerenciar Perfil </title>
     <link rel="icon" type="image/png" href="../imagens/favicon.png"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -17,7 +17,7 @@
     <header>
         <div id="caixao">
             <div class="conteudoHeader">
-                <a href="#"><img src="../imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
+                <a href="#"><img src="../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
                 <form>
                     <input type="text" placeholder="Digite para pesquisar">
                     <button type="submit">
@@ -41,11 +41,11 @@
         </div>
         <div id="caixinha">
             <nav>
-                <a href="../produto/index.html">
-                    Bolos
+                <a href="../pesquisa/index.html">
+                    Produtos
                 </a>
-                <a href="../ofertas/index.html">
-                    Ofertas
+                <a href="../produto/personalizado/index.html">
+                    Personalizado
                 </a>
                 <a href="../cupons/index.html">
                     Cupons
@@ -240,5 +240,56 @@
 
         </div>
     </main>
+    <footer>
+        <div class="tudinho">
+            <div>
+                <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
+                <p class="dev">
+                    Desenvolvido pelo grupo CDP Inc.
+                </p>
+            </div>
+            <div class="textito">
+                <p class="ti">
+                    Nos localizamos em:
+                </p>
+                <p>
+                    R. Humaitá, 638 - Bela Vista, 
+
+                </p>
+                <p>
+                    São Paulo - SP, 01321-010
+                </p>
+            </div>
+            <div class="textito"> 
+                <p class="ti">
+                    Algum problema ou dúvida?
+                </p>
+                <p>
+                    +55 11 98736-0701
+                </p>
+                <p>
+                    edson.koshikumo@etec.sp.gov.br
+                </p>
+            </div>
+            <div class="redes">
+                <p>
+                    Siga-nos
+                </p>
+                <div>
+                    <img src="../imagens/instagram.png" alt="logo do instagram">
+                    <img src="../imagens/twitter-logo-7.png" alt="logo do twitter"> 
+                </div>
+            </div>
+            <div class="app">
+                <p>
+                    Baixe Nossos Aplicativos
+                </p>
+                <div class="zap">
+                    <img class="aba" src="../imagens/DownloadAndroid.png" alt="Faça o Download do aplicativo no Android">
+                    <img class="abb" src="../imagens/appstore.png" alt="Faça o Download do aplicativo na AppStore">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
