--- a/Site/produto/index.html
+++ b/Site/produto/index.html
@@ -12,27 +12,42 @@
         rel="stylesheet">
     <link rel="stylesheet" href="../css/produto.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title> Produto </title>
 </head>
 
 <body>
     <header>
         <div id="caixao">
-            <a href="#"><img src="../imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
-            <form>
-                <input type="text" placeholder="Digite para pesquisar">
-                <button type="submit">
-                    <img src="../imagens/lupa.png" alt="lupa de pesquisa">
-                </button>
-            </form>
+            <div class="conteudoHeader">
+                <a href="#"><img src="../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
+                <form>
+                    <input type="text" placeholder="Digite para pesquisar">
+                    <button type="submit">
+                        <img src="../imagens/lupa.png" alt="lupa de pesquisa">
+                    </button>
+                </form>
+                <a href="#" class="linkUsuario">
+                    <div class="perfilUsuario">
+                        <img src="../imagens/Misaka_10032.jpg" alt="Foto de perfil do usuário">
+                        <h4> Felipe Ribeiro <br> <span> Ver perfil </span></h4>
+                    </div>
+                </a>
+                <a href="#" class="linkCarrinho">
+                    <div class="carrinhoCompras">
+                        <span class="material-icons md-30">
+                            shopping_cart
+                        </span>
+                    </div>
+                </a>
+            </div>
         </div>
         <div id="caixinha">
             <nav>
-                <a href="../produto/index.html">
-                    Bolos
+                <a href="../pesquisa/index.html">
+                    Produtos
                 </a>
-                <a href="../ofertas/index.html">
-                    Ofertas
+                <a href="../produto/personalizado/index.html">
+                    Personalizado
                 </a>
                 <a href="../cupons/index.html">
                     Cupons
@@ -66,7 +81,7 @@
     <main>
         <div class="englobar">
             <div class="imagem">
-                <img src="../imagens/bolor.png">
+                <img src="../imagens/bolor.png" alt="bolo de chocolate">
             </div>
             <div class="juntatu">
                 <div class="dados">
@@ -130,13 +145,13 @@
                 </div>
                 <div class="imgs">
                     <button>
-                        <img src="../imagens/bolor.png" class="teste">
+                        <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     </button>
                     <button>
-                        <img src="../imagens/bolor.png" class="teste">
+                        <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     </button>
                     <button>
-                        <img src="../imagens/bolor.png" class="teste">
+                        <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     </button>
                 </div>
             </div>
@@ -155,7 +170,7 @@
             </h2>
             <div class="produtos">
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     <h4>
                         Bolo de chocolate
                     </h4>
@@ -164,7 +179,7 @@
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     <h4>
                         Bolo de chocolate
                     </h4>
@@ -173,7 +188,7 @@
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     <h4>
                         Bolo de chocolate
                     </h4>
@@ -182,7 +197,7 @@
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     <h4>
                         Bolo de chocolate
                     </h4>
@@ -191,7 +206,7 @@
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     <h4>
                         Bolo de chocolate
                     </h4>
@@ -200,7 +215,7 @@
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     <h4>
                         Bolo de chocolate
                     </h4>
@@ -209,7 +224,7 @@
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../imagens/bolor.png" class="teste">
+                    <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     <h4>
                         Bolo de chocolate
                     </h4>
@@ -221,6 +236,57 @@
         </div>
 
     </main>
+    <footer>
+        <div class="tudinho">
+            <div>
+                <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
+                <p class="dev">
+                    Desenvolvido pelo grupo CDP Inc.
+                </p>
+            </div>
+            <div class="textito">
+                <p class="ti">
+                    Nos localizamos em:
+                </p>
+                <p>
+                    R. Humaitá, 638 - Bela Vista, 
+
+                </p>
+                <p>
+                    São Paulo - SP, 01321-010
+                </p>
+            </div>
+            <div class="textito"> 
+                <p class="ti">
+                    Algum problema ou dúvida?
+                </p>
+                <p>
+                    +55 11 98736-0701
+                </p>
+                <p>
+                    edson.koshikumo@etec.sp.gov.br
+                </p>
+            </div>
+            <div class="redes">
+                <p>
+                    Siga-nos
+                </p>
+                <div>
+                    <img src="../imagens/instagram.png" alt="logo do instagram">
+                    <img src="../imagens/twitter-logo-7.png" alt="logo do twitter"> 
+                </div>
+            </div>
+            <div class="app">
+                <p>
+                    Baixe Nossos Aplicativos
+                </p>
+                <div class="zap">
+                    <img class="aba" src="../imagens/DownloadAndroid.png" alt="Faça o Download do aplicativo no Android">
+                    <img class="abb" src="../imagens/appstore.png" alt="Faça o Download do aplicativo na AppStore">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
