--- a/Site/produto/personalizado/index.html
+++ b/Site/produto/personalizado/index.html
@@ -12,32 +12,47 @@
         rel="stylesheet">
     <link rel="stylesheet" href="../../css/personalizado.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title> Bolos Personalizados</title>
 </head>
 
 <body>
     <header>
         <div id="caixao">
-            <a href="#"><img src="../../imagens/logay.png" alt="logo senhor bolo" width="258" height="50"></a>
-            <form>
-                <input type="text" placeholder="Digite para pesquisar">
-                <button type="submit">
-                    <img src="../../imagens/lupa.png" alt="lupa de pesquisa">
-                </button>
-            </form>
+            <div class="conteudoHeader">
+                <a href="#"><img src="../imagens/logay.png" alt="logo escrito senhor bolo" width="258" height="50"></a>
+                <form>
+                    <input type="text" placeholder="Digite para pesquisar">
+                    <button type="submit">
+                        <img src="../imagens/lupa.png" alt="lupa de pesquisa">
+                    </button>
+                </form>
+                <a href="#" class="linkUsuario">
+                    <div class="perfilUsuario">
+                        <img src="../imagens/Misaka_10032.jpg" alt="Foto de perfil do usuário">
+                        <h4> Felipe Ribeiro <br> <span> Ver perfil </span></h4>
+                    </div>
+                </a>
+                <a href="#" class="linkCarrinho">
+                    <div class="carrinhoCompras">
+                        <span class="material-icons md-30">
+                            shopping_cart
+                        </span>
+                    </div>
+                </a>
+            </div>
         </div>
         <div id="caixinha">
             <nav>
-                <a href="../../produto/index.html">
-                    Bolos
+                <a href="../pesquisa/index.html">
+                    Produtos
                 </a>
-                <a href="../../ofertas/index.html">
-                    Ofertas
+                <a href="../produto/personalizado/index.html">
+                    Personalizado
                 </a>
-                <a href="../../cupons/index.html">
+                <a href="../cupons/index.html">
                     Cupons
                 </a>
-                <a href="../../aboutus/index.html">
+                <a href="../aboutus/index.html">
                     Sobre nós
                 </a>
             </nav>
@@ -70,61 +85,61 @@
             </h2>
             <div class="produtos">
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
@@ -139,61 +154,61 @@
             </h2>
             <div class="produtos">
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
@@ -204,65 +219,65 @@
 
         <div class="recomendados">
             <h2>
-                3. Escolha o sabor da cobertura
+                3. Escolha o sabor de chocolate
             </h2>
             <div class="produtos">
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
                 </div>
                 <div class="produto">
-                    <img src="../../imagens/chocolatios.png" class="teste">
+                    <img src="../../imagens/chocolatios.png" class="teste alt="sabor de chocolate">
                     <p>
                         Chocolate
                     </p>
@@ -284,5 +299,56 @@
             </button>
         </div>
     </main>
+    <footer>
+        <div class="tudinho">
+            <div>
+                <img class="logro" src="../imagens/logay.png" alt="logo escrito senhor bolo">
+                <p class="dev">
+                    Desenvolvido pelo grupo CDP Inc.
+                </p>
+            </div>
+            <div class="textito">
+                <p class="ti">
+                    Nos localizamos em:
+                </p>
+                <p>
+                    R. Humaitá, 638 - Bela Vista, 
+
+                </p>
+                <p>
+                    São Paulo - SP, 01321-010
+                </p>
+            </div>
+            <div class="textito"> 
+                <p class="ti">
+                    Algum problema ou dúvida?
+                </p>
+                <p>
+                    +55 11 98736-0701
+                </p>
+                <p>
+                    edson.koshikumo@etec.sp.gov.br
+                </p>
+            </div>
+            <div class="redes">
+                <p>
+                    Siga-nos
+                </p>
+                <div>
+                    <img src="../imagens/instagram.png" alt="logo do instagram">
+                    <img src="../imagens/twitter-logo-7.png" alt="logo do twitter"> 
+                </div>
+            </div>
+            <div class="app">
+                <p>
+                    Baixe Nossos Aplicativos
+                </p>
+                <div class="zap">
+                    <img class="aba" src="../imagens/DownloadAndroid.png" alt="Faça o Download do aplicativo no Android">
+                    <img class="abb" src="../imagens/appstore.png" alt="Faça o Download do aplicativo na AppStore">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
