--- a/Site/pedidos/pedido.html
+++ b/Site/pedidos/pedido.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/pedidos.css">
     <title> Pedido </title>
 </head>
-<body>s
+<body>
     <header>
         <div id="caixao">
             <div class="conteudoHeader">
