--- a/Site/produto/index.html
+++ b/Site/produto/index.html
@@ -12,6 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="../css/produto.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title> Produto </title>
 </head>
 
@@ -137,9 +138,11 @@
                     
                     <div class="teste">
                         <button class="ad">
+                            <a href="../carrinho/index.html" style=" text-decoration: none; color: #fff;">
                             <p>
                                 Adicionar ao carrinho
                             </p>
+                            </a>
                         </button>
                     </div>
                 </div>
@@ -170,6 +173,7 @@
             </h2>
             <div class="produtos">
                 <div class="produto">
+                    <a href="../produto/index.html" style=" text-decoration: none; color: #000;">
                     <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     <h4>
                         Bolo de chocolate
@@ -177,8 +181,10 @@
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
+                    <a href="../produto/index.html" style=" text-decoration: none; color: #000;">
                     <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     <h4>
                         Bolo de chocolate
@@ -186,8 +192,10 @@
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
+                    <a href="../produto/index.html" style=" text-decoration: none; color: #000;">
                     <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     <h4>
                         Bolo de chocolate
@@ -195,8 +203,10 @@
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
+                    <a href="../produto/index.html" style=" text-decoration: none; color: #000;">
                     <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     <h4>
                         Bolo de chocolate
@@ -204,17 +214,21 @@
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
+                    <a href="../produto/index.html" style=" text-decoration: none; color: #000;">
                     <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     <h4>
                         Bolo de chocolate
                     </h4>
-                    <p>
-                        R$: 29,90
-                    </p>
+                        <p>
+                            R$: 29,90
+                        </p>
+                    </a>
                 </div>
                 <div class="produto">
+                    <a href="../produto/index.html" style=" text-decoration: none; color: #000;">
                     <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     <h4>
                         Bolo de chocolate
@@ -222,8 +236,10 @@
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
                 <div class="produto">
+                    <a href="../produto/index.html" style=" text-decoration: none; color: #000;">
                     <img src="../imagens/bolor.png" alt="bolo de chocolate" class="teste">
                     <h4>
                         Bolo de chocolate
@@ -231,6 +247,7 @@
                     <p>
                         R$: 29,90
                     </p>
+                    </a>
                 </div>
             </div>
         </div>
