--- a/Site/produto/personalizado/index.html
+++ b/Site/produto/personalizado/index.html
@@ -287,15 +287,19 @@
         </div>
         <div class="botoes">
             <button class="ade">
-                <p>
-                    Cancelar
-                </p>
+                <a href="../../home/index.html" style="text-decoration: none; color: #fff;">
+                    <p>
+                        Cancelar
+                    </p>
+                </a>
             </button>
 
             <button class="ad">
+                <a href="../../carrinho/index.html" style="text-decoration: none; color: #fff;">
                 <p>
                     Adicionar ao carrinho
                 </p>
+                </a>
             </button>
         </div>
     </main>
