--- a/Site/login/index.html
+++ b/Site/login/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/login.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Login</title>
 </head>
 <body>
@@ -66,7 +67,7 @@
                     Login
                 </h3>
             </button>
-            <a class="naocadastro" href="cadastro/index.html">
+            <a class="naocadastro" href="../cadastro/index.html">
                 Não tenho cadastro
             </a>
         </div>
